# LP_character_segmentation

./: CMakeLists.txt  README.md  methods.cpp  run.sh  seg_double.cpp  seg_single.cpp  segment.cpp  segment.h
